--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,17 +12,19 @@ dependencies:
   flutter:
     sdk: flutter
 
-  shimmer: ^2.0.0
+  calendar_timeline: ^1.0.5
   cupertino_icons: ^1.0.2
-  flutter_bloc: ^8.1.1
-  http: ^0.13.5
   equatable: ^2.0.5
+  flutter_bloc: ^8.1.1
+  flutter_colorpicker: ^1.0.3
+  http: ^0.13.5
   intl: ^0.17.0
   shared_preferences: ^2.0.15
-  calendar_timeline: ^1.0.5
+  shimmer: ^2.0.0
+
+
   flutter_localizations:
     sdk: flutter
-
 
 dev_dependencies:
   flutter_test:
